# langfuse

./: .blub  .codespellrc  .devcontainer.json  .dockerignore  .env.cloud.example  .env.dev  .env.dev-azure.example  .env.dev-oci.example  .env.dev-redis-cluster.example  .env.dev.example  .env.dev.legacy.example  .env.local.example  .env.prod  .env.prod.example  .env.qa  .env.test.example  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .mcp.json  .npmrc  .nvmrc  .prettierignore  .prettierrc.js  .preview-smoke-test.md  .semgrepignore  .yarnrc  .yarnrc.yml  1.patch  AGENTS.md  BANNER_VIEWPORT_IMPACT_ANALYSIS.md  BILLING_ALERTS_IMPLEMENTATION_PLAN.md  CLAUDE-ZH.md  CLAUDE.md  COMMENT_MENTIONS_IMPLEMENTATION.md  CONDITIONAL_PROMPTS.md  CONTRIBUTING.md  CORRECT_CRONJOB_SCHEDULING_EXAMPLE.md  (+138 more)
.agents/: AGENTS.md  ARCHITECTURE_PRINCIPLES.md  CLAUDE.md  README.md  REVIEW.md  config.json  mcp-servers.json  project-tools.json
.claude/: settings.json  settings.local.json
.codex/: config.toml
.config/: wt.toml
.cursor/: Dockerfile  environment.json  mcp.json.bak
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  zizmor.yml
.husky/: pre-commit  pre-push
.pulumi/: Pulumi.prod.yaml  Pulumi.prod.yml  Pulumi.staging.yaml  Pulumi.staging.yml  Pulumi.yml
.ruler/: instructions.md  ruler.toml
.work/: UPGRADE_LANGCHAIN.MD  aggregation-table-widget-tech-spec.md  dashboard-filter-persistence-spec.md  events-export-requirements.md  events-export-task-plan.md  events-export-tech-spec.md  multi-breakdown-charts-requirements.md  multi-breakdown-charts-task-plan.md  multi-breakdown-charts-tech-spec.md  multi-window-playground-requirements.md  multi-window-playground-task-plan.md  multi-window-playground-tech-spec.md  multi-window-playground-tech-summary.md  pivot-table-sorting-requirements.md  pivot-table-sorting-task-plan.md  pivot-table-sorting-tech-spec.md  pivot-table-widget-requirements.md  pivot-table-widget-task-plan.md  pivot-table-widget-tech-spec.md  slack-integration-requirements.md  slack-integration-task-plan.md  slack-integration-tech-spec.md
customization/: .env.local.example  .gitignore  Makefile  README.md  README_admin.md  docker-compose.override.yml
deploy/: docker-compose.yaml
docs/: CUSTOM_BASE_PATH_HELM.md  DOCUMENTATION_UPDATE_PROPOSAL.md  ISSUE_LFE-7112_RESOLUTION.md  LINEAR_ISSUE_COMMENT.md  README.md  database-url-encoding.md
ee/: .oxlintrc.json  AGENTS.md  LICENSE  README.md  Readme.md  eslint.config.js  eslint.config.mjs  package.json  tsconfig.json
fern/: fern.config.json
history/: 2026-W28-partial-0708.json  2026-W28.json
langfuse-trace-integration/: CONFIG.md  DEPLOY.md  README.md  langfuse-integration-analysis.md  start.sh  test-config.sh  test.sh
nginx/: langfuse.conf
patches/: @langchain__google@0.1.5.patch  next-auth@4.24.11.patch  next-auth@4.24.12.patch  next-auth@4.24.13.patch  next-auth@4.24.14.patch  openid-client.patch  openid-client@5.6.5.patch
performance-queries/: 01-traces-all-current.sql  01-traces-all-new.sql  02-traces-byid-current.sql  02-traces-byid-new.sql  03-observations-for-trace-current.sql  03-observations-for-trace-new.sql  06-filter-names-current.sql  06-filter-names-new.sql  07-dashboard-cost-by-type-current.sql  07-dashboard-cost-by-type-new.sql  08-user-analytics-current.sql  08-user-analytics-new.sql
performance_tests/: README.md  data_generator.ts  ingestion_test.ts  query_latency_test.ts
plans/: auto-assign-pr-author.md  enrich-observation-stream-model-pricing.md  export-field-selection.md
prisma/: schema.prisma  seed.ts
revia-dev/: README.md  docker-compose.dev.yml  env
scripts/: README-ee-removal.md  README-score-analytics-seed.md  README.md  backfill_observations_calculated_cost.sql  dev-web-docker.sh  generate-prod-secrets.sh  model-match.ts  normalize-snyk-sarif.mjs  nuke.sh  optimize_prompt.py  postinstall.sh  release-cloud.sh  release-preflight.sh  remove-ee-imports.js  remove-ee-imports.sh  scan-client-bundle.mjs  (+7 more)
scripts/clickhouse-backfill-rust/: .env.example  .gitignore  Cargo.toml  README.md
scripts/clickhouse-backfill-rust/src/: checkpoint.rs  clickhouse.rs  config.rs  dataset_run_item_loader.rs  inserter.rs  main.rs  observation_streamer.rs  parquet_reader.rs  trace_loader.rs  transformer.rs  types.rs
(+7034 files in other folders)
