[package]
name = "clickhouse-backfill-rust"
version = "0.1.0"
edition = "2021"
authors = ["Langfuse Team"]
description = "High-performance Rust implementation of ClickHouse backfill script"

[[bin]]
name = "clickhouse-backfill-rust"
path = "src/main.rs"

[dependencies]
# ClickHouse client
clickhouse = { path = "./vendor/clickhouse-rs", features = ["inserter", "chrono", "rustls-tls"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal handling
fixnum = { version = "0.9.2", features = ["serde", "i32", "i64", "i128"] }

# Error handling
anyhow = "1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Environment variables
dotenvy = "0.15"

# DateTime handling
chrono = { version = "0.4", features = ["serde"] }

# Progress bars
indicatif = { version = "0.17", features = ["tokio"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Concurrent collections
dashmap = "6.1"

# Fast hashing
ahash = "0.8"

# AWS S3
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.63"
aws-credential-types = "1.2"

# Object store for streaming S3 access
object_store = { version = "0.11", features = ["aws"] }

# Parquet reading with async support
parquet = { version = "53.3", features = ["async", "object_store"] }
arrow = { version = "53.3" }

# Stream utilities
futures = "0.3"
async-stream = "0.3"

# Bytes handling
bytes = "1.9"

[dev-dependencies]
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
